[gd_scene load_steps=6 format=2]

[ext_resource path="res://SolarSystem/Planet.gd" type="Script" id=1]
[ext_resource path="res://assets/blue_planet_1.svg" type="Texture" id=2]
[ext_resource path="res://assets/object_selection_1.svg" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 24.9514

[sub_resource type="Animation" id=2]
resource_name = "Selection"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.8, 1.8 ), Vector2( 1.6, 1.6 ), Vector2( 1.7, 1.7 ), Vector2( 1.75, 1.75 ) ]
}

[node name="Planet" type="StaticBody2D" groups=[
"Planets",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Select" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 3 )

[node name="AnimationSelect" type="AnimationPlayer" parent="Select"]
anims/Selection = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Planet_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Planet_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Planet_mouse_exited"]
